# notion-markdown

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/markdown_to_notion/: __init__.py  _html.py  _inline.py  _parser.py  _types.py
src/notion_markdown/: __init__.py  _cli.py  _html.py  _inline.py  _parser.py  _renderer.py  _rich_text.py
tests/: test_acid.py  test_cli.py  test_convert.py  test_html.py  test_inline.py  test_parser.py  test_renderer.py  test_rich_text.py  test_roundtrip.py
